src/objects/BasePlanDetail__c.object
<CustomObject>
    <description>ベースプラン別ラックレート明細設定情報格納</description>
    <fields>
        <fullName>BasePlanRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>プラン</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipName>BasePlanRefKu0G</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GuestType__c</fullName>
        <label>種別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>一般</fullName>
                </value>
                <value>
                    <fullName>会員</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceSetupDate__c</fullName>
        <label>設定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesStatus__c</fullName>
        <label>販売状態</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>販売中</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>停止中</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SearchKey__c</fullName>
        <externalId>true</externalId>
        <label>SearchKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ラックレート明細（プラン）</label>
    <nameField>
        <displayFormat>PD-{0000000000}</displayFormat>
        <label>明細No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>